--- a/.github/workflows/augustiner.yaml
+++ b/.github/workflows/augustiner.yaml
@@ -94,6 +94,7 @@ jobs:
       run: |
         python ../locations/augustiner/process_chatgpt.py ../locations/augustiner/prompt.txt Mittagskarte.txt
         mkdir -p ../data/augustiner
+        sed -n '/^\s*{$/,$p' chatgpt.json > final.json
         cp final.json ../data/augustiner/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
         CURRENTFILE=${{ matrix.files }}
         cat ../data/augustiner/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
