--- a/.github/workflows/emilundmoritz.yaml
+++ b/.github/workflows/emilundmoritz.yaml
@@ -36,6 +36,7 @@ jobs:
         run: |
           python ../locations/emilundmoritz/process_chatgpt.py ../locations/emilundmoritz/prompt.txt mittagsangebot.txt
           mkdir -p ../data/emilundmoritz
+          sed -n '/^\s*{$/,$p' chatgpt.json > final.json
           cp final.json ../data/emilundmoritz/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
       - name: Archive all tmp files
         uses: actions/upload-artifact@v3
