--- a/.github/workflows/leos.yaml
+++ b/.github/workflows/leos.yaml
@@ -131,6 +131,7 @@ jobs:
       run: |
         python ../locations/leos/process_chatgpt.py ../locations/leos/prompt.txt output.txt
         mkdir -p ../data/leos
+        sed -n '/^\s*{$/,$p' chatgpt.json > final.json
         cp final.json ../data/leos/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
         CURRENTFILE=${{ matrix.files }}
         cat ../data/leos/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
