chore(actions): add verbose output about new pdf links

--- a/.github/workflows/lecasino.yaml
+++ b/.github/workflows/lecasino.yaml
@@ -23,6 +23,7 @@ jobs:
           mkdir -p tmp
           scrapy runspider locations/lecasino/scra.py --nolog | sort > tmp/scraped_links.txt
           cd tmp
+          echo "found these changed links: $(comm -13 ../data/lecasino/scraped_done.txt scraped_links.txt)"
           while IFS= read -r line; do
             curl -sOL $line
           done < <(comm -13 ../data/lecasino/scraped_done.txt scraped_links.txt)
