feat: add option for test run

--- a/.github/workflows/moritzbastai.yaml
+++ b/.github/workflows/moritzbastai.yaml
@@ -1,6 +1,11 @@
 name: moritzbastei
 on:
   workflow_dispatch:
+    inputs:
+      force_publish:
+        description: execute publish job
+        type: boolean
+        default: true
   schedule:
     - cron: '0 10 * * 1'
 permissions: 
@@ -51,7 +56,7 @@ jobs:
           app_id: ${{ secrets.TOKEN_APP_ID }}
           private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
       - name: Create Pull Request
-        if: ${{ !github.event.act }}
+        if: ${{ !github.event.act && (github.event_name != 'workflow_dispatch' || inputs.force_publish) }}
         uses: peter-evans/create-pull-request@v5
         with:
           add-paths: |
