--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "date-fns": "^3.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
