--- a/.github/workflows/augustiner.yaml
+++ b/.github/workflows/augustiner.yaml
@@ -95,7 +95,7 @@ jobs:
         python ../locations/augustiner/process_chatgpt.py ../locations/augustiner/prompt.txt Mittagskarte.txt
         mkdir -p ../data/augustiner
         sed -n '/^\s*{$/,$p' chatgpt.json > final.json
-        cp final.json ../data/augustiner/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
+        cp final.json ../data/augustiner/$(date -d"$(jq -r 'keys[] | select(test("\\d{4}-\\d{2}-\\d{2}"))' final.json | sort | head -n 1)" +%Y-%V).json
         CURRENTFILE=${{ matrix.files }}
         cat ../data/augustiner/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
         cp scraped_done.txt ../data/augustiner/scraped_done.txt
