--- a/.github/workflows/emilundmoritz.yaml
+++ b/.github/workflows/emilundmoritz.yaml
@@ -42,7 +42,7 @@ jobs:
           python ../locations/emilundmoritz/process_chatgpt.py ../locations/emilundmoritz/prompt.txt mittagsangebot.txt
           mkdir -p ../data/emilundmoritz
           sed -n '/^\s*{$/,$p' chatgpt.json > final.json
-          cp final.json ../data/emilundmoritz/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
+          cp final.json ../data/emilundmoritz/$(date -d"$(jq -r 'keys[] | select(test("\\d{4}-\\d{2}-\\d{2}"))' final.json | sort | head -n 1)" +%Y-%V).json
       - name: Archive all tmp files
         uses: actions/upload-artifact@v3
         with:
