--- a/.github/workflows/leos.yaml
+++ b/.github/workflows/leos.yaml
@@ -90,10 +90,12 @@ jobs:
         OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
       shell: bash
       run: |
+        set -E
         python ../locations/leos/process_chatgpt.py ../locations/leos/prompt.txt ${{ matrix.files }}
         mkdir -p ../data/leos
         awk '/^\s*{$/,/^\s*}$/ {print}' chatgpt.json > final.json
-        cp final.json ../data/leos/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
+        jq -r 'keys[] | select(test("\\d{4}-W\\d{2}"))' final.json | sort | head -n 1 | grep "$(python ../locations/.shared/getFormattedDate.py)" || (echo "JSON does not contain expected key" && exit 1)
+        cp final.json ../data/leos/$(python ../locations/.shared/getFormattedDate.py).json
         CURRENTFILE=${{ matrix.files }}
         cat ../data/leos/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
         cp scraped_done.txt ../data/leos/scraped_done.txt
@@ -105,13 +107,13 @@ jobs:
         path: |
           tmp
     - uses: tibdex/github-app-token@v2
-      if: ${{ !github.event.act || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
+      if: ${{ !github.event.act && ( github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' ) }}
       id: generate-token
       with:
         app_id: ${{ secrets.TOKEN_APP_ID }}
         private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
     - name: Create Pull Request
-      if: ${{ !github.event.act || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
+      if: ${{ !github.event.act && ( github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' ) }}
       uses: peter-evans/create-pull-request@v5
       with:
         add-paths: |
