--- a/.github/workflows/moritzbastai.yaml
+++ b/.github/workflows/moritzbastai.yaml
@@ -59,14 +59,14 @@ jobs:
         run: |
           WD=${PWD}
           mkdir -p tmp
-          scrapy runspider locations/moritzbastei/scra.py --nolog > tmp/mittagsangebot.txt
+          scrapy runspider locations/moritzbastei/scra.py --nolog > tmp/chatgpt_user.txt
       - name: process txt with chatgpt
         working-directory: tmp
         env:
           OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
         shell: bash
         run: |
-          python ../locations/moritzbastei/process_chatgpt.py ../locations/moritzbastei/prompt.txt mittagsangebot.txt
+          python ../locations/moritzbastei/process_chatgpt.py
           mkdir -p ../data/moritzbastei
           sed -n '/^\s*{$/,$p' chatgpt.json > final.json
           cp final.json ../data/moritzbastei/$(date -d"$(jq -r 'keys[] | select(test("\\d{4}-\\d{2}-\\d{2}"))' final.json | sort | head -n 1)" +%Y-%V).json
