--- a/.github/workflows/augustiner.yaml
+++ b/.github/workflows/augustiner.yaml
@@ -85,14 +85,14 @@ jobs:
     - name: extract txt from ${{ matrix.files }}
       working-directory: tmp
       run: |
-        pdftotext ${{ matrix.files }} Mittagskarte.txt
+        pdftotext ${{ matrix.files }} chatgpt_user.txt
     - name: process txt with chatgpt
       working-directory: tmp
       env:
         OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
       shell: bash
       run: |
-        python ../locations/augustiner/process_chatgpt.py ../locations/augustiner/prompt.txt Mittagskarte.txt
+        python ../locations/augustiner/process_chatgpt.py
         mkdir -p ../data/augustiner
         sed -n '/^\s*{$/,$p' chatgpt.json > final.json
         cp final.json ../data/augustiner/$(date -d"$(jq -r 'keys[] | select(test("\\d{4}-\\d{2}-\\d{2}"))' final.json | sort | head -n 1)" +%Y-%V).json
