--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -44,17 +44,17 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker meta
         id: meta-gen # you'll use this in the next step
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         with:
           # list of Docker images to use as base name for tags
           images: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
           # Docker tags based on the following events/attributes
           tags: |
-            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=schedule,pattern={{date 'YYYY-MM-DD'}}
             type=ref,event=branch
             type=ref,event=pr
-            type=sha
+            type=sha,suffix=-{{date 'YYYY-MM-DD'}}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
