chore(ci): optimize workflows for dependabot
- do not run automerge wf
- run the site build wf always for dependabot to make sure changes build but do not deploy

--- a/.github/workflows/automerge-cron-pr.yaml
+++ b/.github/workflows/automerge-cron-pr.yaml
@@ -8,6 +8,7 @@ on:
   status: {}
 jobs:
   automerge:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
       - uses: tibdex/github-app-token@v2
