--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -76,7 +76,7 @@ jobs:
     needs: changes
     if: >-
       ${{ (github.ref_name == 'main' && inputs.workflowcall) && (inputs.comment != 'run on main only if workflowcall otherwise always')
-      && (needs.changes.outputs.frontend == 'true' || needs.changes.outputs.locations == 'true') && (inputs.comment != 'run only if frontend or locations change, i.e. this is a release')
+      || (needs.changes.outputs.frontend == 'true' || needs.changes.outputs.locations == 'true') && (inputs.comment != 'run only if frontend or locations change, i.e. this is a release')
       || (needs.changes.outputs.data == 'true' || needs.changes.outputs.workflow == 'true' || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' && (inputs.comment != 'run when data or workflow changes or when manually triggered')) }}
     runs-on: ubuntu-latest
     container:
