--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -48,7 +48,7 @@ jobs:
           matrixStringifiedObject=$(cat ./matrix) # Use this as jq @sh not working right
           echo "::set-output name=matrix::$matrixStringifiedObject"
       - name: Archive all pdfs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pdfs
           retention-days: 30
@@ -76,7 +76,7 @@ jobs:
             github.event_name == 'schedule' && 'main' || ''
           }}
     - name: Download pdf artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: pdfs
         path: downloadtmp
@@ -121,14 +121,14 @@ jobs:
         cp ${{ matrix.files }} ../success-pdfs
         cp final.json ../success-pdfs/$(date -d"$(jq -r 'keys[] | select(test("\\d{4}-\\d{2}-\\d{2}"))' final.json | sort | head -n 1)" +%Y-%V).json
     - name: Archive final files
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: success-pdfs
+        name: ${{ matrix.files }}-success-pdfs
         retention-days: 5
         path: |
           success-pdfs
     - name: Archive all tmp files
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.files }}-processed
         retention-days: 5
@@ -147,15 +147,16 @@ jobs:
               github.event_name == 'schedule' && 'main' || ''
             }}
       - name: Download originally downloaded pdf artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: pdfs
           path: downloadtmp
       - name: Download successfully processed pdf artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: success-pdfs
+          pattern: '*-success-pdfs'
           path: success-pdfs
+          merge-multiple: true
       - name: process csv with chatgpt
         working-directory: success-pdfs
         shell: bash
