chore: pin runners to ubuntu-24.04

--- a/.github/workflows/augustiner.yaml
+++ b/.github/workflows/augustiner.yaml
@@ -9,7 +9,7 @@ permissions:
   pull-requests: write
 jobs:
   download:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
     outputs:
@@ -53,7 +53,7 @@ jobs:
   process:
     needs: download
     if: ${{ needs.download.outputs.matrix != '' && toJson(fromJson(needs.download.outputs.matrix)) != '[]' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
     strategy:
