--- a/.github/workflows/downmerge.yaml
+++ b/.github/workflows/downmerge.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 jobs:
   merge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: tibdex/github-app-token@v2
         id: generate-token
