--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -8,7 +8,7 @@ permissions:
   packages: write
 jobs:
   download:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
     outputs:
@@ -57,7 +57,7 @@ jobs:
   process:
     needs: download
     if: ${{ needs.download.outputs.matrix != '' && toJson(fromJson(needs.download.outputs.matrix)) != '[]' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
     strategy:
@@ -137,7 +137,7 @@ jobs:
   publish:
     needs: process
     if: success() || failure ()
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: checkout
         uses: actions/checkout@v3
