fix: reference new GEMINI key

--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -108,7 +108,7 @@ jobs:
     - name: process image with chatgpt
       working-directory: tmp
       env:
-        OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+        GEMINI_API_KEY: ${{secrets.GEMINI_API_KEY}}
       shell: bash
       run: |
         python ../locations/ratskeller/process_chatgpt.py
