--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -15,6 +15,8 @@ on:
     paths:
       - 'docker/**'
       - '.github/workflows/docker.yaml'
+  schedule:
+    - cron: '25 3 1 * *' # every 1st day of the month at 3:25am
 
 # permissions are needed if pushing to ghcr.io
 permissions: 
